// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseIntentFromReactAst - Snapshot > should produce stable anchored report for demo-app/src/App.tsx 1`] = `
{
  "anchors": [
    {
      "componentKey": "LoginButton",
      "componentLoc": {
        "endLine": 44,
        "startLine": 27,
      },
      "componentName": "LoginButton",
      "extracted": {
        "fills": [
          "#3B82F6",
        ],
        "semantics": {
          "booleans": {},
          "flex": {},
          "layout": {},
          "text": {
            "content": [
              {
                "confidence": "high",
                "loc": {
                  "endColumn": 4,
                  "endLine": 42,
                  "startColumn": 5,
                  "startLine": 40,
                },
                "value": "Sign In",
              },
            ],
          },
          "visual": {
            "fills": [
              {
                "confidence": "high",
                "loc": {
                  "endColumn": 34,
                  "endLine": 31,
                  "startColumn": 8,
                  "startLine": 31,
                },
                "value": "#3B82F6",
              },
            ],
          },
        },
        "text": [
          "Sign In",
        ],
      },
      "markerLine": 25,
      "nodeName": "LoginButton",
      "notes": [],
    },
    {
      "componentKey": "LoginButton",
      "componentLoc": {
        "endLine": 44,
        "startLine": 27,
      },
      "componentName": "LoginButton",
      "extracted": {
        "fills": [
          "#3B82F6",
        ],
        "semantics": {
          "booleans": {},
          "flex": {},
          "layout": {},
          "text": {
            "content": [
              {
                "confidence": "high",
                "loc": {
                  "endColumn": 4,
                  "endLine": 42,
                  "startColumn": 5,
                  "startLine": 40,
                },
                "value": "Sign In",
              },
            ],
          },
          "visual": {
            "fills": [
              {
                "confidence": "high",
                "loc": {
                  "endColumn": 34,
                  "endLine": 31,
                  "startColumn": 8,
                  "startLine": 31,
                },
                "value": "#3B82F6",
              },
            ],
          },
        },
        "text": [
          "Sign In",
        ],
      },
      "markerLine": 26,
      "nodeName": "LoginButton::hover",
      "notes": [],
    },
    {
      "componentKey": "TestBox",
      "componentLoc": {
        "endLine": 62,
        "startLine": 51,
      },
      "componentName": "TestBox",
      "extracted": {
        "fills": [
          "#FF0000",
        ],
        "semantics": {
          "booleans": {},
          "flex": {},
          "layout": {
            "height": {
              "confidence": "high",
              "loc": {
                "endColumn": 19,
                "endLine": 56,
                "startColumn": 8,
                "startLine": 56,
              },
              "value": 100,
            },
            "width": {
              "confidence": "high",
              "loc": {
                "endColumn": 18,
                "endLine": 55,
                "startColumn": 8,
                "startLine": 55,
              },
              "value": 100,
            },
          },
          "text": {},
          "visual": {
            "fills": [
              {
                "confidence": "high",
                "loc": {
                  "endColumn": 34,
                  "endLine": 57,
                  "startColumn": 8,
                  "startLine": 57,
                },
                "value": "#FF0000",
              },
            ],
          },
        },
      },
      "markerLine": 50,
      "nodeName": "TestBox",
      "notes": [],
    },
    {
      "componentKey": "WelcomeHeading",
      "componentLoc": {
        "endLine": 71,
        "startLine": 69,
      },
      "componentName": "WelcomeHeading",
      "extracted": {
        "semantics": {
          "booleans": {},
          "flex": {},
          "layout": {},
          "text": {
            "content": [
              {
                "confidence": "high",
                "loc": {
                  "endColumn": 32,
                  "endLine": 70,
                  "startColumn": 13,
                  "startLine": 70,
                },
                "value": "Welcome to the Demo",
              },
            ],
          },
          "visual": {},
        },
        "text": [
          "Welcome to the Demo",
        ],
      },
      "markerLine": 68,
      "nodeName": "WelcomeText",
      "notes": [],
    },
  ],
  "filePath": "demo-app/src/App.tsx",
}
`;

exports[`parseIntentFromReactAst - Snapshot > should produce stable output for demo-app/src/App.tsx 1`] = `
{
  "components": [
    {
      "componentKey": "LoginButton",
      "componentName": "LoginButton",
      "inlineStyleLiterals": [
        {
          "element": "button",
          "loc": {
            "endColumn": 34,
            "endLine": 31,
            "startColumn": 8,
            "startLine": 31,
          },
          "styleProp": "backgroundColor",
          "value": "#3B82F6",
        },
        {
          "element": "button",
          "loc": {
            "endColumn": 22,
            "endLine": 32,
            "startColumn": 8,
            "startLine": 32,
          },
          "styleProp": "color",
          "value": "white",
        },
        {
          "element": "button",
          "loc": {
            "endColumn": 28,
            "endLine": 33,
            "startColumn": 8,
            "startLine": 33,
          },
          "styleProp": "padding",
          "value": "12px 24px",
        },
        {
          "element": "button",
          "loc": {
            "endColumn": 27,
            "endLine": 34,
            "startColumn": 8,
            "startLine": 34,
          },
          "styleProp": "borderRadius",
          "value": "8px",
        },
        {
          "element": "button",
          "loc": {
            "endColumn": 22,
            "endLine": 35,
            "startColumn": 8,
            "startLine": 35,
          },
          "styleProp": "border",
          "value": "none",
        },
        {
          "element": "button",
          "loc": {
            "endColumn": 24,
            "endLine": 36,
            "startColumn": 8,
            "startLine": 36,
          },
          "styleProp": "fontSize",
          "value": "16px",
        },
        {
          "element": "button",
          "loc": {
            "endColumn": 23,
            "endLine": 37,
            "startColumn": 8,
            "startLine": 37,
          },
          "styleProp": "fontWeight",
          "value": 600,
        },
        {
          "element": "button",
          "loc": {
            "endColumn": 25,
            "endLine": 38,
            "startColumn": 8,
            "startLine": 38,
          },
          "styleProp": "cursor",
          "value": "pointer",
        },
      ],
      "isExported": true,
      "jsxPropLiterals": [],
      "jsxTextLiterals": [
        {
          "loc": {
            "endColumn": 4,
            "endLine": 42,
            "startColumn": 5,
            "startLine": 40,
          },
          "text": "Sign In",
        },
      ],
      "loc": {
        "endLine": 44,
        "startLine": 27,
      },
      "semantics": {
        "booleans": {},
        "flex": {},
        "layout": {},
        "text": {
          "content": [
            {
              "confidence": "high",
              "loc": {
                "endColumn": 4,
                "endLine": 42,
                "startColumn": 5,
                "startLine": 40,
              },
              "value": "Sign In",
            },
          ],
        },
        "visual": {
          "fills": [
            {
              "confidence": "high",
              "loc": {
                "endColumn": 34,
                "endLine": 31,
                "startColumn": 8,
                "startLine": 31,
              },
              "value": "#3B82F6",
            },
          ],
        },
      },
    },
    {
      "componentKey": "TestBox",
      "componentName": "TestBox",
      "inlineStyleLiterals": [
        {
          "element": "div",
          "loc": {
            "endColumn": 18,
            "endLine": 55,
            "startColumn": 8,
            "startLine": 55,
          },
          "styleProp": "width",
          "value": 100,
        },
        {
          "element": "div",
          "loc": {
            "endColumn": 19,
            "endLine": 56,
            "startColumn": 8,
            "startLine": 56,
          },
          "styleProp": "height",
          "value": 100,
        },
        {
          "element": "div",
          "loc": {
            "endColumn": 34,
            "endLine": 57,
            "startColumn": 8,
            "startLine": 57,
          },
          "styleProp": "backgroundColor",
          "value": "#FF0000",
        },
        {
          "element": "div",
          "loc": {
            "endColumn": 23,
            "endLine": 58,
            "startColumn": 8,
            "startLine": 58,
          },
          "styleProp": "borderRadius",
          "value": 8,
        },
      ],
      "isExported": true,
      "jsxPropLiterals": [],
      "jsxTextLiterals": [],
      "loc": {
        "endLine": 62,
        "startLine": 51,
      },
      "semantics": {
        "booleans": {},
        "flex": {},
        "layout": {
          "height": {
            "confidence": "high",
            "loc": {
              "endColumn": 19,
              "endLine": 56,
              "startColumn": 8,
              "startLine": 56,
            },
            "value": 100,
          },
          "width": {
            "confidence": "high",
            "loc": {
              "endColumn": 18,
              "endLine": 55,
              "startColumn": 8,
              "startLine": 55,
            },
            "value": 100,
          },
        },
        "text": {},
        "visual": {
          "fills": [
            {
              "confidence": "high",
              "loc": {
                "endColumn": 34,
                "endLine": 57,
                "startColumn": 8,
                "startLine": 57,
              },
              "value": "#FF0000",
            },
          ],
        },
      },
    },
    {
      "componentKey": "WelcomeHeading",
      "componentName": "WelcomeHeading",
      "inlineStyleLiterals": [],
      "isExported": true,
      "jsxPropLiterals": [],
      "jsxTextLiterals": [
        {
          "loc": {
            "endColumn": 32,
            "endLine": 70,
            "startColumn": 13,
            "startLine": 70,
          },
          "text": "Welcome to the Demo",
        },
      ],
      "loc": {
        "endLine": 71,
        "startLine": 69,
      },
      "semantics": {
        "booleans": {},
        "flex": {},
        "layout": {},
        "text": {
          "content": [
            {
              "confidence": "high",
              "loc": {
                "endColumn": 32,
                "endLine": 70,
                "startColumn": 13,
                "startLine": 70,
              },
              "value": "Welcome to the Demo",
            },
          ],
        },
        "visual": {},
      },
    },
    {
      "componentKey": "App",
      "componentName": "App",
      "inlineStyleLiterals": [
        {
          "element": "div",
          "loc": {
            "endColumn": 29,
            "endLine": 79,
            "startColumn": 18,
            "startLine": 79,
          },
          "styleProp": "padding",
          "value": 40,
        },
        {
          "element": "div",
          "loc": {
            "endColumn": 66,
            "endLine": 79,
            "startColumn": 31,
            "startLine": 79,
          },
          "styleProp": "fontFamily",
          "value": "system-ui, sans-serif",
        },
        {
          "element": "div",
          "loc": {
            "endColumn": 35,
            "endLine": 81,
            "startColumn": 20,
            "startLine": 81,
          },
          "styleProp": "display",
          "value": "flex",
        },
        {
          "element": "div",
          "loc": {
            "endColumn": 44,
            "endLine": 81,
            "startColumn": 37,
            "startLine": 81,
          },
          "styleProp": "gap",
          "value": 20,
        },
        {
          "element": "div",
          "loc": {
            "endColumn": 59,
            "endLine": 81,
            "startColumn": 46,
            "startLine": 81,
          },
          "styleProp": "marginTop",
          "value": 20,
        },
      ],
      "isExported": true,
      "jsxPropLiterals": [],
      "jsxTextLiterals": [],
      "loc": {
        "endLine": 87,
        "startLine": 77,
      },
      "semantics": {
        "booleans": {},
        "flex": {
          "display": {
            "confidence": "high",
            "loc": {
              "endColumn": 35,
              "endLine": 81,
              "startColumn": 20,
              "startLine": 81,
            },
            "value": "flex",
          },
        },
        "layout": {
          "gap": {
            "confidence": "high",
            "loc": {
              "endColumn": 44,
              "endLine": 81,
              "startColumn": 37,
              "startLine": 81,
            },
            "value": 20,
          },
          "padding": {
            "confidence": "high",
            "loc": {
              "endColumn": 29,
              "endLine": 79,
              "startColumn": 18,
              "startLine": 79,
            },
            "value": 40,
          },
        },
        "text": {},
        "visual": {},
      },
    },
  ],
  "filePath": "demo-app/src/App.tsx",
}
`;
